--- a/css/style.css
+++ b/css/style.css
@@ -2601,7 +2601,7 @@ ul {
   width: 100%;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
   top: 0;
-  background-color: #562fc7;
+  background-color: rgb(6, 6, 184);
 }
 
 /* line 313, ../../01 cl html template/03_jun 2019/185 Ecobit SAAS html/sass/_menu.scss */
