--- a/css/style.css
+++ b/css/style.css
@@ -3454,8 +3454,8 @@ ul {
 
 /* line 35, ../../01 cl html template/03_jun 2019/185 Ecobit SAAS html/sass/_pricing_plan.scss */
 .pricing_part .single_pricing_part p {
-  color: #182028;
-  font-size: 30px;
+  color: #0c0067;
+  font-size: 20px;
   font-weight: 600;
   text-transform: capitalize;
   margin-bottom: 27px;
@@ -3463,7 +3463,7 @@ ul {
 
 /* line 42, ../../01 cl html template/03_jun 2019/185 Ecobit SAAS html/sass/_pricing_plan.scss */
 .pricing_part .single_pricing_part h3 {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 600;
   border-top: 1px solid #eee;
   margin-bottom: 5px;
@@ -3472,10 +3472,35 @@ ul {
 
 /* line 48, ../../01 cl html template/03_jun 2019/185 Ecobit SAAS html/sass/_pricing_plan.scss */
 .pricing_part .single_pricing_part h3 span {
-  font-size: 16px;
+  font-size: 15px;
   color: #919191;
   font-weight: 400;
 }
+
+/* this line contained cross text for  */
+.crossed-text{
+  position: relative;
+  display: inline-block;
+  font-size: large;
+}
+.crossed-text::after,
+.crossed-text::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #f00;
+  top: 50%;
+  left: 0%;
+  transform: translateY(-50%);
+}
+.crossed-text::before{
+  transform: translateY(-50) rotate(45deg);
+}
+.crossed-text::after{
+  transform: translateY(-50) rotate(-45deg);
+}
+
 
 /* line 54, ../../01 cl html template/03_jun 2019/185 Ecobit SAAS html/sass/_pricing_plan.scss */
 .pricing_part .single_pricing_part .pricing_btn {
@@ -4495,7 +4520,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* line 387, ../../01 cl html template/03_jun 2019/185 Ecobit SAAS html/sass/_elements.scss */
 .progress-table .table-row {
-  padding: 15px 0;
+  padding: 5px 0;
   border-top: 1px solid #edf3fd;
   display: flex;
 }
@@ -4511,7 +4536,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* line 399, ../../01 cl html template/03_jun 2019/185 Ecobit SAAS html/sass/_elements.scss */
 .progress-table .table-row .country img {
-  margin-right: 15px;
+  margin-right: 25px;
 }
 
 /* line 404, ../../01 cl html template/03_jun 2019/185 Ecobit SAAS html/sass/_elements.scss */
@@ -6342,5 +6367,25 @@ h1, h2, h3, h4, h5, h6 {
     float: none;
   }
 }
+
+
+/* styles for the formating of stroke accross texts */
+.single-stroke {
+  font-size: 36px; /* adjust font size as needed */
+  position: relative;
+  display: inline-block;
+}
+
+.single-stroke::before {
+  content: attr(data-text);
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: transparent;
+  text-stroke: 1px black; /* specify the stroke color and width */
+  -webkit-text-stroke: 1px black; /* for Safari */
+}
+
+
 
 /*# sourceMappingURL=style.css.map */
